src/modes/snapshots/ascii_renderer__modes___118_semaphore__tests__semaphore_80x24_t6.snap
---
source: src/modes/_118_semaphore.rs
expression: "chars(&rendered(42, 6.0, 80, 24))"
---
                                                                                
     W E S T                                     ____   ____         E A S T    
                                          ____                 ____   ____   _  
  __   _^__   ____   __             ___                                 ^       
       /_\             __   ____   _                                   /_\      
                                                                                
       |.|                                                             |.|      
       / \                                                             / \      
       / \                                                             / \      
       /=\                                                             /=\      
       / \                                                             / \      
       / \                   |                                         / \      
      / = \                                                           / = \     
      /   \            |                                              /   \     
______________________/|\_______________________________________________________
                       |                                                        
                    \_____/                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                 WEST > KEEP THE_
